cmake_minimum_required(VERSION 2.8)

project(ReactionDiffusion)

add_subdirectory(TuringSpots)
add_subdirectory(MeinhardtSpots)
add_subdirectory(MeinhardtStripes)
add_subdirectory(GrayScott)
add_subdirectory(Brusselator)
add_subdirectory(Oregonator)
add_subdirectory(Brandeisator)
add_subdirectory(FitzHughNagumo)
add_subdirectory(ComplexGinzbergLandau)
